<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_name">Kamelrechner</string>
    <string name="kamelrechner">Kamelrechner</string>
    <string name="go">Go</string>
    <string name="Name">Name</string>
    <string name="Gewicht">Gewicht</string>
    <string name="Alter">Alter</string>
    <string name="Geschlecht">Geschlecht</string>
    <string name="Haarfarbe">Haarfarbe</string>
    <string name="Augenfarbe">Augenfarbe</string>
    <string name="Körbchengröße">Körbchengröße</string>
    <string name="Statur">Statur</string>
    <string name="Header">Gib deine Daten ein!</string>
    <string name="Berechnen">Berechnen</string>
    <string name="mustername">Sophia</string>
    <string name="close">Info schließen</string>
    <string name="Info_Header">Über unsere App</string>
    <string name="info">i</string>
    <string name="verlauf">Name - Ergebnis - Kommentar</string>
    <string name="res_close">Nächste Person</string>
    <string name="Rechnung">camels = (body+eye+breast+hair)*2+(1/200*(weight-65)²+10)+gender+(1/200*(age-20)²+10)</string>
    <string name="Variablen">body = Statur \n eye = Augenfarbe \n breast = Körpchengröße \n hair= Haarfarbe \n weight = Gewicht in Kilogramm \n gender = Geschlecht \n age = Alter</string>
    <string name="Formel">Formel</string>
    <string name="Beschreibung">Die von uns entwickelte Formel berechnet, wieviel Kamele eine bestimmte Person wert wäre. Die von uns entwickelte Formel berechnet, wieviel Kamele eine bestimmte Person wert wäre.
Früher wurden tatsächlich Personen gegen Tiere eingetauscht. Heutzutage ist dies selbstverständlich nicht der Fall. Der Kamelrechner dient lediglich zur Unterhaltung. Um herauszufinden wieviele Kamele beispielsweise deine Freundin oder dein Freund wert wäre, werden für die Berechung, Angaben zu den optischen Eigenschaften der jeweiligen Person herangezogen.
Somit gibt das Ergebnis der Formel eine Anzahl von Kamelen an.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>